--- a/meter_reading.html
+++ b/meter_reading.html
@@ -23,10 +23,12 @@
 
   <div class="info-section">
     <h2>物件・部屋情報</h2>
-    <div class="info-item"><span class="info-label">物件名:</span> <span id="property-name"></span></div>
-    <div class="info-item"><span class="info-label">部屋名:</span> <span id="room-name"></span></div>
-    <div class="info-item"><span class="info-label">物件ID:</span> <span id="property-id"></span></div>
-    <div class="info-item"><span class="info-label">部屋ID:</span> <span id="room-id"></span></div>
+    <div class="info-item">
+        <span class="info-label">物件名:</span> <span id="property-name"></span> /
+        <span class="info-label">部屋名:</span> <span id="room-name"></span>
+    </div>
+    <div class="info-item" style="display: none;"><span class="info-label">物件ID:</span> <span id="property-id"></span></div>
+    <div class="info-item" style="display: none;"><span class="info-label">部屋ID:</span> <span id="room-id"></span></div>
   </div>
 
   <div class="info-section">
