--- a/meter_reading.html
+++ b/meter_reading.html
@@ -39,9 +39,9 @@
         <thead>
           <tr>
             <th>検針日時</th>
-            <th>今回の指示数</th>
-            <th>前回指示数</th>
-            <th>前々回指示数</th> <!-- 追加 -->
+            <th>今回(㎥)</th>
+            <th>前回</th>
+            <th>前々回</th>
             <th>今回使用量</th>
             <th>状態</th>
             <th>写真</th>
