--- a/meter_reading.html
+++ b/meter_reading.html
@@ -20,6 +20,7 @@
 <body>
   <button id="back-button-meter" style="margin-bottom: 10px; padding: 8px 12px;">部屋選択へ戻る</button>
   <h1>検針情報</h1>
+  <div id="debug-info" style="border: 1px solid red; padding: 10px; margin-top: 10px; white-space: pre-wrap; font-size: 10px; background-color: #f0f0f0; color: black;">デバッグ情報エリア</div>
 
   <div class="info-section">
     <h2>物件・部屋情報</h2>
@@ -69,6 +70,8 @@
     async function initializeWoff() {
       try {
         console.log('[meter_reading] WOFFを初期化します。');
+        const debugInfoDiv = document.getElementById('debug-info');
+        debugInfoDiv.innerHTML = 'WOFF初期化開始...<br>';
 
         // sessionStorageからgasWebAppUrlを取得
         gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl');
@@ -86,16 +89,31 @@
         }
         await woff.init({ woffId: woffIdForWorks });
         console.log('[meter_reading] WOFFの初期化に成功しました。');
+        debugInfoDiv.innerHTML += 'WOFF初期化成功。<br>';
         // WOFF初期化成功直後のwoffオブジェクトの状態を確認
         console.log('[meter_reading] WOFF初期化成功直後のwoffオブジェクト全体:', woff);
+        debugInfoDiv.innerHTML += '<b>WOFF初期化直後:</b><br>';
         if (woff) {
             console.log('[meter_reading] woffのプロパティ一覧:', Object.keys(woff));
+            debugInfoDiv.innerHTML += 'woffオブジェクトのプロパティ: ' + JSON.stringify(Object.keys(woff)) + '<br>';
             console.log('[meter_reading] WOFF初期化成功直後のwoff.media:', woff.media);
+            debugInfoDiv.innerHTML += 'woff.media: ' + String(woff.media) + '<br>';
+            if (woff.media) {
+                debugInfoDiv.innerHTML += 'woff.mediaのプロパティ: ' + JSON.stringify(Object.keys(woff.media)) + '<br>';
+            } else {
+                debugInfoDiv.innerHTML += 'woff.media は undefined または null です。<br>';
+            }
+        } else {
+            debugInfoDiv.innerHTML += 'woff オブジェクト自体が undefined または null です。<br>';
         }
         // WOFF初期化成功後にメインの処理を実行
         await loadMeterReadings();
       } catch (error) {
         console.error('[meter_reading] WOFFの初期化に失敗しました:', error);
+        const debugInfoDiv = document.getElementById('debug-info');
+        if (debugInfoDiv) {
+            debugInfoDiv.innerHTML += '<b>WOFF初期化失敗:</b> ' + error.toString() + '<br>';
+        }
         document.getElementById('meter-readings-list').innerHTML = '<p>アプリの起動に失敗しました。WOFFの初期化を確認してください。</p>';
         // WOFF初期化失敗時も、loadMeterReadings を試みるか、あるいはエラー表示のみとするか。
         // 現状はエラー表示のみで、戻るボタンは機能する。
@@ -230,13 +248,32 @@
             cameraButton.textContent = '撮影';
             cameraButton.setAttribute('data-date-button', reading.date);
             cameraButton.addEventListener('click', async (event) => {
+              const debugInfoDiv = document.getElementById('debug-info');
+              debugInfoDiv.innerHTML = 'カメラボタンクリック時のデバッグ情報:<br>'; // 情報をクリアして新しい情報を表示
               try {
                 const date = event.target.getAttribute('data-date-button');
                 console.log('[meter_reading] カメラボタンクリック: date=', date);
+                debugInfoDiv.innerHTML += 'カメラボタンクリック: date=' + date + '<br>';
+
+                debugInfoDiv.innerHTML += '<b>カメラボタンクリック直後:</b><br>';
+                if (typeof woff !== 'undefined') {
+                    debugInfoDiv.innerHTML += 'woffオブジェクトのプロパティ: ' + JSON.stringify(Object.keys(woff)) + '<br>';
+                    debugInfoDiv.innerHTML += 'woff.media: ' + String(woff.media) + '<br>';
+                    if (woff.media) {
+                        debugInfoDiv.innerHTML += 'woff.mediaのプロパティ: ' + JSON.stringify(Object.keys(woff.media)) + '<br>';
+                        debugInfoDiv.innerHTML += 'woff.media.getPictureの型: ' + typeof woff.media.getPicture + '<br>';
+                    } else {
+                        debugInfoDiv.innerHTML += 'woff.media は undefined または null です。<br>';
+                    }
+                } else {
+                    debugInfoDiv.innerHTML += 'woff オブジェクト自体が undefined または null です。<br>';
+                }
+
 
                 // woff.media.getPicture が利用可能か確認
                 if (typeof woff === 'undefined' || typeof woff.media === 'undefined' || typeof woff.media.getPicture !== 'function') {
                   console.error('[meter_reading] woff.media.getPicture が利用できません。woffオブジェクト:', woff, 'woff.mediaオブジェクト:', (woff ? woff.media : 'woff is undefined'));
+                  debugInfoDiv.innerHTML += '<span style="color: red;">エラー: woff.media.getPicture が利用できません。</span><br>';
                   alert('カメラ機能を利用できません。アプリがLINE WORKSモバイル版アプリで実行されており、カメラへのアクセス権限が許可されているか確認してください。');
                   return;
                 }
